--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -9,11 +9,18 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world! Changed!!
-  displayName: 'Run a one-line script'
+jobs:
+- job: Job1Details
+  steps:
+  - script: echo Job1 - Hello, world! Changed!!
+    displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+  - script: |
+      echo Add other tasks to build, test, and deploy your project.
+      echo See https://aka.ms/yaml
+    displayName: 'Run a multi-line script'
+
+- job: Job2Details
+  steps:
+  - script: echo Job2 - Hello, world! Changed!!
+    displayName: 'Run a one-line script'  
