--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: ubuntu-latest
 
 jobs:
-- job: Job1Details
+- job: Job1
   steps:
   - script: echo Job1 - Hello, world! Changed!!
     displayName: 'Run a one-line script'
@@ -20,7 +20,22 @@ jobs:
       echo See https://aka.ms/yaml
     displayName: 'Run a multi-line script'
 
-- job: Job2Details
+- job: Job2
+  dependsOn: Job1
   steps:
   - script: echo Job2 - Hello, world! Changed!!
+    displayName: 'Run a one-line script'  
+
+- job: Job3
+  dependsOn: Job1
+  steps:
+  - script: echo Job3 - Hello, world! Changed!!
+    displayName: 'Run a one-line script'  
+
+- job: Job4
+  dependsOn:
+  - Job2
+  - Job3
+  steps:
+  - script: echo Job4 - Hello, world! Changed!!
     displayName: 'Run a one-line script'  
