--- a/01-understanding-stages.yml
+++ b/01-understanding-stages.yml
@@ -16,20 +16,26 @@ stages:
     steps:
     - script: echo Hello BuildJob1
   - job: BuildJob2
+    dependsOn: BuildJob1
     steps:
     - script: echo Hello BuildJob2
 
 - stage: DevDeploy
+  dependsOn: Build
   jobs:
   - job: DevDeployJob
     steps:
     - script: echo Hello DevDeployJob 
 - stage: QADeploy
+  dependsOn: Build
   jobs:
   - job: QADeployJob
     steps:
     - script: echo Hello QADeployJob 
 - stage: ProdDeploy
+  dependsOn:
+  - DevDeploy
+  - QADeploy
   jobs:
   - job: ProdDeployJob
     steps:
