--- a/01-understanding-stages.yml
+++ b/01-understanding-stages.yml
@@ -15,35 +15,43 @@ stages:
   - job: BuildJob1
     steps:
     - bash: echo $(PipelineVariable)
-  - job: BuildJob2
-    dependsOn: BuildJob1
-    steps:
-    - script: echo Hello BuildJob2 and variable is $(PipelineVariable)
+    - bash: echo $(Build.BuildNumber)
+    - bash: echo $(Build.BuildId)
+    - bash: echo $(Build.SourceBranchName)
+    - bash: echo $(Build.SourcesDirectory)
+    - bash : ls $(System.DefaultWorkingDirectory)
+    - bash: echo $(System.DefaultWorkingDirectory)
+    - bash: echo $(Build.ArtifactStagingDirectory)
 
-- stage: DevDeploy
-  variables:
-    env: Dev
-  dependsOn: Build
-  jobs:
-  - job: DevDeployJob
-    steps:
-    - bash: echo Hello $(env)DeployJob 
-- stage: QADeploy
-  variables:
-    env: QA
-  dependsOn: Build
-  jobs:
-  - job: QADeployJob
-    steps:
-    - bash: echo Hello $(env)DeployJob 
-- stage: ProdDeploy
-  variables:
-    env: Prod
-  dependsOn:
-  - DevDeploy
-  - QADeploy
-  jobs:
-  - job: ProdDeployJob
-    steps:
-    - bash: echo Hello $(env)DeployJob 
+#   - job: BuildJob2
+#     dependsOn: BuildJob1
+#     steps:
+#     - script: echo Hello BuildJob2 and variable is $(PipelineVariable)
+
+# - stage: DevDeploy
+#   variables:
+#     env: Dev
+#   dependsOn: Build
+#   jobs:
+#   - job: DevDeployJob
+#     steps:
+#     - bash: echo Hello $(env)DeployJob 
+# - stage: QADeploy
+#   variables:
+#     env: QA
+#   dependsOn: Build
+#   jobs:
+#   - job: QADeployJob
+#     steps:
+#     - bash: echo Hello $(env)DeployJob 
+# - stage: ProdDeploy
+#   variables:
+#     env: Prod
+#   dependsOn:
+#   - DevDeploy
+#   - QADeploy
+#   jobs:
+#   - job: ProdDeployJob
+#     steps:
+#     - bash: echo Hello $(env)DeployJob 
 
