--- a/01-understanding-stages.yml
+++ b/01-understanding-stages.yml
@@ -22,6 +22,22 @@ stages:
     - bash : ls $(System.DefaultWorkingDirectory)
     - bash: echo $(System.DefaultWorkingDirectory)
     - bash: echo $(Build.ArtifactStagingDirectory)
+    - bash: java -version
+    - bash: node --version
+    - bash: python --version
+    - bash: mvn -version
+    - bash: ls $(Build.ArtifactStagingDirectory)
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: '$(System.DefaultWorkingDirectory)'
+        Contents: |
+          **/*.yaml
+          **/*.tf
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
+        
+    - bash: ls $(Build.ArtifactStagingDirectory)
+
+    
 
 #   - job: BuildJob2
 #     dependsOn: BuildJob1
