Publish the artifact

--- a/01-understanding-stages.yml
+++ b/01-understanding-stages.yml
@@ -35,9 +35,13 @@ stages:
           **/*.tf
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
         
-    - bash: ls $(Build.ArtifactStagingDirectory)
+    - bash: ls -R $(Build.ArtifactStagingDirectory)
 
-    
+    - task: PublishBuildArtifacts@1
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
 
 #   - job: BuildJob2
 #     dependsOn: BuildJob1
