--- a/03-playing-environment-strategies.yml
+++ b/03-playing-environment-strategies.yml
@@ -11,7 +11,7 @@ strategy:
     linux:
       operatingSystem: 'ubuntu-latest'
     mac:
-      operaingSystem: 'macos-latest'
+      operatingSystem: 'macos-latest'
 
 pool:
   vmImage: $(operatingSystem)
