--- a/03-playing-environment-strategies.yml
+++ b/03-playing-environment-strategies.yml
@@ -6,16 +6,38 @@
 trigger:
 - main
 
-strategy:
-  matrix:
-    linux:
-      operatingSystem: 'ubuntu-latest'
-    mac:
-      operatingSystem: 'macos-latest'
+# strategy:
+#   matrix:
+#     linux:
+#       operatingSystem: 'ubuntu-latest'
+#     mac:
+#       operatingSystem: 'macos-latest'
 
 pool:
-  vmImage: $(operatingSystem)
+  vmImage: 'ubuntu-latest'
 
-steps:
-- script: echo Hello, world! Running on $(operatingSystem)
-  displayName: 'Run a one-line script'
+stages:
+- stage: BuildStage
+  jobs:
+  - job: BuildJob
+    steps:
+    - bash: echo Do the build
+- stage: DeployDev
+  jobs:
+  - deployment: DeployDev
+    environment: Dev
+    strategy:
+     runOnce:
+       deploy:
+         steps:
+           - script: echo Deploy to Dev
+
+- stage: DeployQA
+  jobs:
+  - deployment: DeployQA
+    environment: QA
+    strategy:
+     runOnce:
+      deploy:
+        steps:
+          - script: echo Deploy to QA
