--- a/05-azure-kubernetes-cluster-iaac-pipeline.yml
+++ b/05-azure-kubernetes-cluster-iaac-pipeline.yml
@@ -23,7 +23,7 @@ steps:
   inputs:
     command: 'init'
     workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/azure/kubernetes'
-    commandOptions: '-var "client_id=$(client_id)" -var "client_secret=$(client_secret)" -var "ssh_public_key=$(publickey.secureFilePath)"'
+    #commandOptions: '-var "client_id=$(client_id)" -var "client_secret=$(client_secret)" -var "ssh_public_key=$(publickey.secureFilePath)"'
     backendType: 'azurerm'
     backendServiceArm: 'AzureServiceConnection'
     backendAzureRmTenantId: 'd48fa67a-6d93-43bf-a947-4e4b67f46d52'
@@ -35,3 +35,9 @@ steps:
     backendAzureRmContainerName: 'kubernetes-iaac'
     backendAzureRmKey: 'kubernetes-iaac.tfstate'
     allowTelemetryCollection: true
+
+- task: TerraformCLI@2
+  inputs:
+    command: 'apply'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/configuration/iaac/azure/kubernetes'
+    commandOptions: '-var "client_id=$(client_id)" -var "client_secret=$(client_secret)" -var "ssh_public_key=$(publickey.secureFilePath)"'
